fix text alignment of price grid headers; closes #225

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_pricing-grid.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_pricing-grid.scss
@@ -167,6 +167,7 @@
       padding: 0.75rem;
       border-radius: 1rem 1rem 0 0;
       opacity: 0.75;
+      text-align: center;
     }
   }
 }
